debsecan (0.4.2) unstable; urgency=low

  * Handle file open errors more gracefully.  Closes: #352925.
  * Add --show-whitelist option.  Closes: #352927.

 -- Florian Weimer <fw@deneb.enyo.de>  Fri, 19 May 2006 18:10:38 +0200

debsecan (0.4.1) unstable; urgency=low

  * urllib2 raises yet another exception when networking problems occur;
    handle it.  Closes: #349760.

 -- Florian Weimer <fw@deneb.enyo.de>  Wed, 25 Jan 2006 14:15:53 +0100

debsecan (0.4.0) unstable; urgency=low

  * In report mode, aggregate similar packages into lists.  Suggested by
    Moritz Muehlenhoff.
  * Use python-apt if it is available, which allows us to deal with
    versions which do not conform to policy.  Closes: #346179.
  * Add --line-length option.  Closes: #346193.
  * In report mode, include an URL which has more information about the
    bug.  Closes: #346191.
  * Add whitelisting support.  Closes: #345920.

 -- Florian Weimer <fw@deneb.enyo.de>  Tue, 17 Jan 2006 19:21:52 +0100

debsecan (0.3.4) unstable; urgency=low

  * Switch to urllib2, which handles HTTP errors in a better way.
    Closes: #345308.
  * Add --no-obsolete option.

 -- Florian Weimer <fw@deneb.enyo.de>  Sun,  1 Jan 2006 13:50:24 +0100

debsecan (0.3.3) unstable; urgency=low

  * Fix syntax error in config script.  Closes: #344976.
  * Be more tolerant about broken package descriptions in
    /var/lib/dpkg/status.  Closes: #344996.

 -- Florian Weimer <fw@deneb.enyo.de>  Wed, 28 Dec 2005 09:52:53 +0100

debsecan (0.3.2) unstable; urgency=low

  * Fix typo in obsolete packages message.  Closes: #344778.
  * --format report and --only-fixed no longer conflict.
  * Add debconf configuration.

 -- Florian Weimer <fw@deneb.enyo.de>  Tue, 27 Dec 2005 14:23:03 +0100

debsecan (0.3.1) unstable; urgency=low

  * Remove duplicate explanations regarding obsolete packages.

 -- Florian Weimer <fw@deneb.enyo.de>  Sun, 25 Dec 2005 18:12:25 +0100

debsecan (0.3) unstable; urgency=low

  * Support package pinning.